Fix Gradle build